# mrg32k3a

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: mrg32k3a-core.yml  mrg32k3a.yml  python-tests.yml
docs/: conf.py  index.rst  modules.rst  mrg32k3a.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
mrg32k3a/: matmodops.py  mrg32k3a.py
mrg32k3a-core/: Cargo.toml  pyproject.toml
mrg32k3a-core/src/: lib.rs  normal.rs
mrg32k3a-rs/: Cargo.toml
mrg32k3a-rs/src/: lib.rs
src/mrg32k3a/: __init__.py  base.py  matmodops.py  mrg32k3a.py  python.py  rust.py
src/mrg32k3a/docs/: conf.py  index.rst  mrg32k3a.rst
src/tests/: test_matmodops.py  test_mrg32k3a.py
tests/: test_matmodops.py  test_mrg32k3a.py
