[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mrg32k3a"
version = "2.0.0"
authors = [
  { name = "David Eckman", email = "eckman@tamu.edu" },
  { name = "Shane Henderson", email = "sgh9@cornell.edu" },
  { name = "Sara Shashaani", email = "sshasha2@ncsu.edu" },
  { name = "William Grochocinski", email = "williamgrochocinski@gmail.com" },
]
description = "A Python implementation of the mrg32k3a pseudo-random number generator."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["numpy"]

[project.urls]
"Homepage" = "https://github.com/simopt-admin/mrg32k3a"
"Documentation" = "https://mrg32k3a.readthedocs.io/en/latest/"

[project.optional-dependencies]
rust = ["mrg32k3a-core>=0.1.0"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
